criação de usuarios com Spring Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.database=POSTGRESQL
 spring.datasource.plataform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/hospital
+spring.datasource.url=jdbc:postgresql://localhost:5432/usuarios
 spring.datasource.username=postgres
 spring.datasource.password=123456
 
